themes/ddbasic/sass/module/_carousel.scss
/**
 * Carousel
 *
 * @author magnify
 */



/* Variables
   ========================================================================== */

$carousel-background-color:                $white;
$carousel-image-width:                     135px;
$carousel-image-max-height:                250px;
$carousel-tab-background-color:            transparentize($black, .5);
$carousel-active-tab-background-color:     $black;
$carousel-tab-color:                       $white;



/* Wrapper, load and inner
   ========================================================================== */

.ting-search-carousel {
  @include zen-grid-item(12, 1);

  padding: 0;

  .ajax-loader {
    @include border-radius(12px);

    border: 1px solid transparentize($black, .5);
    padding: 5px;
    top: 100px;
  }

  @include small-medium() {
    background-color: $gray;
  }
}

.ting-search-carousel {
  .slick-slider {
    background-color: $carousel-background-color;
    min-height: 225px;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 30px;
    padding-left: 20px;
    margin-bottom: 0;

    @include small-medium() {
      background-color: transparent;
      min-height: 150px;
      padding-top: 20px;
      padding-right: 20px;
      padding-bottom: 20px;
      padding-left: 20px;
    }
  }
}


/* Pagination and previous and next buttons
   ========================================================================== */

.rs-carousel-pagination {
  display: none;
}

.ting-search-carousel .slick-prev,
.ting-search-carousel .slick-next {
  @include opacity(1);
  background-color: $header-background-color;
  border: 2px solid $navigation-background-color;
  background-image: url('../images/arrows-carousel.png');
  border-radius: 40px;
  z-index: 100;

  @include small-medium() {
    display: none;
  }
}

.ting-search-carousel {
  .slick-prev {
    left: 40px;

    &:focus {
      outline: none;
    }
  }

  .slick-next {
    right: 40px;
    
    &:focus {
      outline: none;
    }
  }
}



/* Carousel content, mask, title etc.
   ========================================================================== */

.rs-carousel-title {
  @include box-sizing(border-box);
  @include font-bold();

  color: transparentize($black, .3);
  font-size: $font-size-larger;
  margin-bottom: 20px;

  @include small() {
    font-size: $font-size-largest;
  }

  @include small-medium() {
    color: $white;
  }
}

.slick-track .ting-search-carousel-item {
  margin-right: 20px;
  position: relative;
  width: $carousel-image-width !important;

  img {
    min-width: 100%;
    padding: 0;
    width: 135px;
    height: 196px;

    @include small() {
      width: 68px;
      height: 96px;
      margin-bottom: 20px;
    }
  }

  &:hover {
    .field-type-ting-title {
      background-color: $black;
      text-decoration: none;
    }
  }

  .a {
    max-height: $carousel-image-max-height;
    width: $carousel-image-width;
     &:hover {
      text-decoration: none;
    }
  }

  .field-type-ting-title {
    @include box-sizing(border-box);

    background-color: transparentize($black, .25);
    bottom: 0;
    color: $white;
    left: 0;
    padding-top: 10px;
    padding-bottom: 10px;
    position: absolute;
    text-align: center;
    width: 100%;
    z-index: 100;

    h2 {
      font-size: 100%;
      font-family: $font-regular;
      margin: 0 15px;

      a {
        color: $white;
      }
    }
  }

  .field-type-ting-details-type {
    background-color: transparentize($black, .25);
    color: $white;
    line-height: 1.2em;
    padding: 0px 4px;
    position: absolute;
    right: 5px;
    top: 5px;
    width: auto;
    z-index: 100;

    .field-label {
      display: none;
    }

    @include small() {
      font-size: 80%;
      max-width: 50px;
    }
  }

  @include small() {
    width: $carousel-image-width / 2 !important;

    a {
      max-height: $carousel-image-max-height / 2;
      width: $carousel-image-width / 2;
    }

    .field-type-ting-title {
      background: none;
      height: 100%;
      padding: 0;
      position: absolute;
      width: 100%;
      z-index: 100;

      a, h2 {
        display: block;
        height: 100%;
        margin: 0;
        position: absolute;
        text-indent: -9000px;
        width: 100%;
      }

      &:hover {
        background: none;
      }
    }
  }
}

.rs-carousel-runner {
  padding-left: 0;
}



/* Carousel tabs
   ========================================================================== */

.ting-search-carousel-select-tabs {
  display: none;
  
  @include small-medium() {
    display: block;
    width: 100%;
    
    .rs-carousel-item {
      @include border-radius(12px);

      display: block;
      background-color: $white;
      color: $black;
      padding-left: 20px;
      text-align: left;

      &:before {
        @include border-radius(12px);

        background-color: $black;
        color: $white;
        cursor: pointer;
        display: block;
        font-family: $base-icon-library-font;
        padding-top: 15px;
        padding-right: 20px;
        padding-bottom: 15px;
        padding-left: 20px;
        position: absolute;
        right: 0;
        z-index: 99;
      }

      &.js-tab-hidden {
        display: none;
      }

      &.js-tab-visible {
        display: block;
      }
    }
  }
}   

.ting-search-carousel-tabs {
  .ting-search-carousel-list-tabs {
    margin: 0;
    padding: 0;
    position: relative;
    text-align: center;

    .ting-search-carousel-item {
      @extend .icon-chevron-down;
      float: left;

      a {
        background-color: $carousel-tab-background-color;
        color: $carousel-tab-color;
        display: block;
        margin-right: 1px;
        padding-top: 15px;
        padding-bottom: 15px;
        position: relative;

        &:hover {
          background-color: $carousel-active-tab-background-color;
          text-decoration: none;
        }
      }

      &.active {
        a {
          @include font-bold();

          background-color: $carousel-active-tab-background-color;

          &:before {
            @include pseudo-arrow(10px, $carousel-active-tab-background-color, top, center, $offset: 20px);
          }
        }
      }

      &:before {
        display: none;
      }
    }
  }

  

  @include small-medium() {
    display: none;
  }
}

